--- a/index.html
+++ b/index.html
@@ -567,17 +567,17 @@
                         <div class="text">
                             <input id="id" type="hidden" value="">
                             <label for="nome">Marca do cilindro</label>
-                            <input id="nome" type="text" placeholder="marcar" required>
+                            <input id="nome" type="text" required>
                         </div>
                         <div class="text">
                             <label for="imagem">Numero de série:</label>
-                            <input id="imagem" type="number" placeholder="Link da imagem" type="textfield" required>
+                            <input id="imagem" type="number" required>
                         </div>
                     </div>
                     <div id="right">
                         <div class="text">
                            <label> Volume (L):</label>
-                            <input id="imagem" type="text" placeholder="Link da imagem" type="textfield" required>
+                            <input id="imagem" type="number"  required>
                         </div>
                     </div>
                 </div>
