--- a/index.html
+++ b/index.html
@@ -200,10 +200,59 @@
                     <label>02</label>
                     <label>Dados dos Componentes do Sistema de GNV</label>
                 </div>
+                <div  class="subtopico">
+                    <p>02.01</p>
+                    <p>Dados do Cilindro</p>
+                </div>
                 <div class="cilindro">
-                    <div id="btnModal" class="btnModal">
-                        <p>02.01</p>
-                        <p>Dados do Cilindro</p>
+                   <div id="btnModal" class="btnModal">Adicionar cilindro</div>
+                </div>
+                <div class="nCilindro">1</div>
+            <div class="gCilindro">
+                <div class="lista">
+                    <div>
+                        <label>marca</label>
+                    </div>
+                    <div>
+                        <label>n° série</label>
+                    </div>
+                    <div>
+                        <label>Volume</label>
+                    </div>
+                </div>
+                    <div class="lista">
+                        <div>
+                            <p>clivelto</p>
+                        </div>
+                        <div>
+                            <p>123-123-1231</p>
+                           
+                        </div>
+                        <div>
+                            <P>3l</P>
+                        </div>
+                    </div>
+                    <div class="lista">
+                        <div>
+                            <label>Dt fabricação</label>
+                        </div>
+                        <div>
+                            <label>Dt reteste</label>
+                        </div>
+                        <div>
+                            <label>Nº selo seq</label>
+                        </div>
+                    </div>
+                    <div class="lista">
+                        <div>
+                            <p>27/06/2000</p>
+                            
+                        </div>
+                        <div>
+                            <p>20/06/2000</p></div>
+                        <div>
+                            <p>123-123-1231</p>
+                        </div>
                     </div>
                 </div>
                 <div class="subtopico">
@@ -545,7 +594,198 @@
                         <input  name="03_18" type="radio">
                     </div>
                 </div>
-                <p>...</p>
+                <div class="topico">
+                    <label>04</label>
+                    <label>Cilindro para armazenamento de GNV </label>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.01</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Conformidade com a ABNT NBR 12176(req. 5 anos)</p>
+                    </div>
+                    <div>
+                        <input name="04_01" type="radio" checked>
+                    </div>
+                    <div>
+                        <input name="04_01" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_01" type="radio">
+                    </div>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.02</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Atendimento a Portatia Inmetro nº 143/04(cor)</p>
+                    </div>
+                    <div>
+                        <input name="04_02" type="radio" checked>
+                    </div>
+                    <div>
+                        <input name="04_02" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_02" type="radio">
+                    </div>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.03</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Confor com a norma ABNT NBR 12274(mossa /trinca/ cortes/marcação/indevida)</p>
+                    </div>
+                    <div>
+                        <input name="04_03" type="radio" checked>
+                    </div>
+                    <div>
+                        <input name="04_03" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_03" type="radio">
+                    </div>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.04</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Instalação</p>
+                    </div>
+                    <div>
+                        <input name="04_04" type="radio" checked>
+                    </div>
+                    <div>
+                        <input name="04_04" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_04" type="radio">
+                    </div>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.05</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Fixação</p>
+                    </div>
+                    <div>
+                        <input name="04_05" type="radio" checked>
+                    </div>
+                    <div>
+                        <input name="04_05" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_05" type="radio">
+                    </div>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.06</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Distribuição de Massa</p>
+                    </div>
+                    <div>
+                        <input name="04_06" type="radio" checked>
+                    </div>
+                    <div>
+                        <input name="04_06" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_06" type="radio">
+                    </div>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.07</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Sistema de ventilação</p>
+                    </div>
+                    <div>
+                        <input name="04_07" type="radio" >
+                    </div>
+                    <div>
+                        <input name="04_07" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_07" type="radio" checked>
+                    </div>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.08</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Etiqueta de Aviso (resgras de segurança)</p>
+                    </div>
+                    <div>
+                        <input name="04_08" type="radio" checked>
+                    </div>
+                    <div>
+                        <input name="04_08" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_08" type="radio" >
+                    </div>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.09</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Posicionamento Angulo(altura livre e ângulos de entrada e saída de rampa)</p>
+                        <p>EIME: REM-01</p>
+                    </div>
+                    <div>
+                        <input name="04_09" type="radio" >
+                    </div>
+                    <div>
+                        <input name="04_09" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_09" type="radio" checked>
+                    </div>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.11</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Proteção contra choque retirada para inspeção visual</p>
+                    </div>
+                    <div>
+                        <input name="04_10" type="radio" >
+                    </div>
+                    <div>
+                        <input name="04_10" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_10" type="radio" checked>
+                    </div>
+                </div>
+                <div class="lista">
+                    <div>
+                        <p>04.12</p>
+                    </div>
+                    <div>
+                        <p class="desclist">Proteção térmica(<200 mm fonte calor 70°C -20°C) </p>
+                    </div>
+                    <div>
+                        <input name="04_12" type="radio" >
+                    </div>
+                    <div>
+                        <input name="04_12" type="radio">
+                    </div>
+                    <div>
+                        <input name="04_12" type="radio" checked>
+                    </div>
+                </div>
                 <div class="topico">
                     <label>05</label>
                     <label>Dimensões /Dimensionameto (mm)</label>
@@ -732,15 +972,15 @@
                 </div>
                 <div id="bellow">
                     <label for="nome">Data fabricação:</label>
-                    <input id="imagem" type="date" placeholder="Link da imagem" type="textfield" required>
+                    <input id="imagem" type="date" type="textfield" required>
                 </div>
                 <div id="bellow">
                     <label for="nome">Data Resteste:</label>
-                    <input id="imagem" type="date" placeholder="Link da imagem" type="textfield" required>
+                    <input id="imagem" type="date"  type="textfield" required>
                 </div>
                 <div id="bellow">
                     <label for="nome">Nº Selo sequencial:</label>
-                    <input id="imagem" type="date" placeholder="Link da imagem" type="textfield" required>
+                    <input id="imagem" type="number"  type="textfield" required>
                 </div>
                 <input class="btnModal" type="submit" value="Salvar">
             </form>
